--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Come back soon!</title>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
 	</head>
 <body>
-    
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+  <h1>Page is Underway!</h1>
+	<p>If you've come to see amundsonaerialphotography, you've come to the right place!<br/><br/>
+	But while you are waiting, check out our music website: <br/><button onclick="go()">amundsonfamilymusic.com</button></p>
+	<img src="A.jpg"></img>
 </body>
 </html>
