--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<br/>
   <h1>Page is Underway!</h1>
 	<p>If you've come to see amundsonaerialphotography, you've come to the right place!<br/><br/>
-	But while you are waiting, check out our music website: <br/><button onclick="go()">amundsonfamilymusic.com</button></p>
+	But while you are waiting, check out our music website: <br/><br/><button onclick="go()">amundsonfamilymusic.com</button></p>
 	<img src="A.jpg"></img>
 </body>
 </html>
