--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Come back soon!</title>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
+	<link rel="shortcut icon" href="AAP logo.ico" />
 	</head>
 <body>
 	<br/>
