--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
 	<link rel="shortcut icon" href="AAP logo.ico" />
+	<a href="/Photos">Photos</a>
 	</head>
 <body>
 	<br/>
