--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Come back soon!</title>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="AAPtest.ico" />
 	</head>
 <body>
 	<br/>
