--- a/Photos/index.html
+++ b/Photos/index.html
@@ -7,11 +7,13 @@
 	</head>
 <body>
   <h1 class="Photos">Photos</h1>
-	<p>Here are some Photos!<br/><br/>
-    <img src="farm.jpg" class="farm"></img><br/><br/>
-    <img src="DJI_0187 copy.jpg" class="farm"></img><br/><br/>
-    <img src="DJI_0262.jpg" class="farm"></img><br/><br/>
-		<img src="DJI_0184.jpg" class="farm"></img><br/><br/>
+	<p>Here are some Photos!<br/><br/><h3>1</h3>
+    <img src="AAP_0001.jpg" class="farm"></img><br/><br/><h3>2</h3>
+    <img src="AAP_0002.jpg" class="farm"></img><br/><br/><h3>3</h3>
+    <img src="AAP_0003.jpg" class="farm"></img><br/><br/><h3>4</h3>
+    <img src="AAP_0004.jpg" class="farm"></img><br/><br/><h3>5</h3>
+    <img src="AAP_0005.jpg" class="farm"></img><br/><br/>
+<center><p>All Photos taken by :Ira Amundson<br/>Guest Photographers: none</p></center>
 
 
 </body>
