--- a/Photos/index.html
+++ b/Photos/index.html
@@ -4,10 +4,11 @@
 	<title>Come back soon!</title>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
+	<link rel="shortcut icon" href="MyLogo.ico" />
 	</head>
 <body>
   <h1 class="Photos">Photos</h1>
-	<p>Here are some Photos!<button class="b1" onclick= "goBack()" >Go Back</button><br/><br/><h3>1</h3>
+	<p>Here are some Photos!     <button class="b1" onclick= "goBack()" >Go Back</button><br/><br/><h3>1</h3>
     <img src="AAP_0001.jpg" class="farm"></img><br/><br/><h3>2</h3>
     <img src="AAP_0002.jpg" class="farm"></img><br/><br/><h3>3</h3>
     <img src="AAP_0003.jpg" class="farm"></img><br/><br/><h3>4</h3>
