--- a/Photos/index.html
+++ b/Photos/index.html
@@ -14,7 +14,9 @@
     <img src="AAP_0003.jpg" class="farm"></img><br/><br/><h3>4</h3>
     <img src="AAP_0004.jpg" class="farm"></img><br/><br/><h3>5</h3>
     <img src="AAP_0005.jpg" class="farm"></img><br/><br/>
-<center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p></center>
+<center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p>
+<div class= "foot"></div></center>
+
 
 
 </body>
