--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<br/>
   <h1>Page is Underway!</h1>
 	<p>If you've come to see amundsonaerialphotography, you've come to the right place!<br/><br/>
-	But while you are waiting, check out our music website: <br/><br/><button onclick="go()">amundsonfamilymusic.com</button></p>
+	But while you are waiting, check out our music website: <br/><br/><button onclick="go()">amundsonfamilymusic.com</button><br/>or look at some of my Photos:</p>
+	<button onclick="Photos()">Photos</button>
 	<img src="A.jpg"></img>
 </body>
 </html>
