--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>Page is Underway!</h1>
 	<p>If you've come to see amundsonaerialphotography, you've come to the right place!<br/><br/>
 	But while you are waiting, check out our music website: <br/><br/><button onclick="go()">amundsonfamilymusic.com</button><br/><br/>or look at some of my Photos:</p><br/>
-	<center><button onclick="Photos()">Photos</button><br/></center>
+	<center><a class="a1" href="# http://amundsonaerialphotography.com/">Photos</a></center>
 	<img src="A.jpg"></img>
 </body>
 </html>
