--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<br/>
   <h1>Page is Underway!</h1>
 	<p>If you've come to see amundsonaerialphotography, you've come to the right place!<br/><br/>
-	But while you are waiting, check out our music website: <br/><br/><a class="button" href="# https://amundsonfamilymusic.com/">amundsonfamilymusic.com</a><br/><br/>or look at some of my Photos:</p><br/>
+	But while you are waiting, check out our music website: <br/><br/><a class="button" href="# https://amundsonfamilymusic.com/">amundsonfamilymusic.com</a><br/><br/>or look at some of my Photos:</p>
 	<center><a class="button" href="# http://amundsonaerialphotography.com/Photos/">Photos</a></center>
 	<img src="A.jpg"></img>
 </body>
