--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<br/>
   <h1>Page is Underway!</h1>
 	<p>If you've come to see amundsonaerialphotography, you've come to the right place!<br/><br/>
-	But while you are waiting, check out our music website: <br/><br/><button onclick="window.location.relpace('https://amundsonfamilymusic.com')"</button><br/><br/>or look at some of my Photos:</p>
-	<center><a href="Photos/">Photos</a></center><br/>
-	<center><img src="A.jpg"></img></center>
+	But while you are waiting, check out our music website: <br/><br/><button onclick="afm()"</button><br/><br/>or look at some of my Photos:</p>
+	<center><a href="Photos/">Photos</a><br/>
+	<img src="A.jpg"></img></center>
 </body>
 </html>
