--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>Page is Underway!</h1>
 	<p>If you've come to see amundsonaerialphotography, you've come to the right place!<br/><br/>
 		But while you are waiting, check out our music website: </p><br/><br/><button onclick="afm()"</button><br/><br/><p>or look at some of my Photos:</p><br/>
-	<center><a href="Photos/">Photos</a><br/>
-	<img src="A.jpg"></img></center>
+	<center><a href="Photos/">Photos</a></center><br/>
+	<img src="A.jpg"></img>
 </body>
 </html>
