--- a/index.html
+++ b/index.html
@@ -49,5 +49,10 @@
 			<br/>
 	      <img src="A.jpg"></img><br/><br/>
 </body>
+<script>
+function afm() {
+  window.open('https://amundsonfamilymusic.com');
+}
+</script>
 </html>
 
