--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
 
 			<br/>
 	      <img src="A.jpg"></img><br/><br/>
+	                <!-- HUNTERcourse.com Hunter Safety Practice Test START -->
+                <h2>10 Question Hunter Safety Practice Test</h2>
+                <p>Test your hunting knowledge with this <strong>10 question</strong> hunter safety practice test.<br />
+                You need to answer <strong>8 out of 10</strong> questions correctly to pass!</p>
+                <div style="width: auto; float: left;">
+                    <a href="http://twitter.com/share" class="twitter-share-button" data-url="https://www.huntercourse.com/safety/practice-test.aspx" data-text="Hunter safety practice test" data-count="horizontal" data-via="huntercourse">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+                </div>
+                <div style="width: auto; float: left;">
+                    <iframe src="https://www.facebook.com/plugins/like.php?href=https://www.huntercourse.com/safety/practice-test.aspx" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:400px; height:35px;" allowTransparency="true" title="Facebook"></iframe>
+                </div>
+            <iframe src="//tde.huntercourse.com/miniquiz/init/5024B70A018D8460C92BF3B7CBB8417FA8998D27A15FA8EF7C8707C70D047D8EE1122D1D5EE2158542F5A2F6CBD50FCA27475599CFD911202489691A04C3C3CEE69D1F0ADBBBA80B03F4F8043C0525142CEA34C21F328E03" width="760" height="500" frameborder="0" scrolling="no" title="Quiz"></iframe>
+             <div style="width:760px;">
+                <div style="float:left;width:60%;text-align:right;margin:10px;">Powered by:</div>   
+                <div style="float:left;margin:10px;">
+                <a href="https://www.huntercourse.com"><img src="//azureblob.faecdn.com/cdn/d/hex/i/hexnoframe.gif" title="HUNTERcourse.com Educating Hunters Online" alt="HUNTERcourse.com Educating Hunters Online" border="0"></a><br />
+                     Get your <a href="https://www.huntercourse.com" style="color:#F78E1E !important;">hunter safety course</a> online!
+                </div>
+            </div>
+            <!-- End HUNTERcourse.com Hunter Safety Practice Test -->
 </body>
 <script>
 function afm() {
