--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 			<br/>
 	    <a href="Photos/">
 			  Photos
-			</a>
+			</a><br/>
+	<p>But, if you are Ira, click this button (he is doing some experimenting, and this is his [test] page)</p>
 
 			<br/>
 	      <img src="A.jpg"></img><br/><br/>
