--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	    <a href="Photos/">
 			  Photos
 			</a><br/>
-	<p>But, if you are Ira, click this button (he is doing some experimenting, and this is his [test] page)</p>
+	<p>But, if you are Ira, click this button (he is doing some experimenting, and this is his [test] page)<a href="irasTestPage/">Ira's [test]page</a></p>
 
 			<br/>
 	      <img src="A.jpg"></img><br/><br/>
