--- a/irasTestPage/index.html
+++ b/irasTestPage/index.html
@@ -29,7 +29,7 @@
 	    <br/>
 	    <br/>
 	      <div class="imageWrapper">
-          <img src="snow field.jpg"/>
+          <img src="snow fied copy.psd.zip"/>
             <div class="textWrapper">
               <h1>This is my home page</h1>
 		          <h5>I don't really know what to put here, so if you have an idea,<br/> please tell me: <a href="mailto: technoman5005.ila@gmail.com">technoman5005.ila@gmail.com</a></h5>
