--- a/irasTestPage/index.html
+++ b/irasTestPage/index.html
@@ -28,14 +28,13 @@
 	    <br/>
 	    <br/>
 	    <br/>
-	      <div class="imageWrapper">
-          <img src="snow fied 0001.jpg"/>
+	      
+          <img class="homeimg" src="snow fied 0001.jpg"/>
             <div class="textWrapper">
               <h1>This is my home page</h1>
 		          <h5>I don't really know what to put here, so if you have an idea,<br/> please tell me: <a href="mailto: technoman5005.ila@gmail.com">technoman5005.ila@gmail.com</a></h5>
-            </div>
             
-		<img src="shayefield.jpg"/>
+		<img class="homeimg" src="shayefield.jpg"/>
               </div>
          <br/>
           </div>
