--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
 
 			<br/>
 	      <img src="A.jpg"></img><br/><br/>
-	<footer>
-	  
-	</footer>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	<br/>
+	  <footer class="footer">
+	    <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
+	  </footer>
 	                
 </body>
 <script>
