--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<br/>
 	<br/>
 	<br/>
-	  <footer class="footer">
+	  <footer>
 	    <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
 	  </footer>
 	                
