--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
 	<br/>
 	<br/>
 	<br/>
-	  
+	  <footer>
+            <br/>
+	    <br/>
+	    <br/>
+	      <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
+	    <br/>
+	    <br/>
+	    <br/>
+	</footer>
 	                
 </body>
 <script>
