--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
 	  <footer>
             <br class="footbr" />
 		  <p>Do not try to click these links; you will get a 404 error (page not found)</p>
-	    
+	    <div class="navbottom">
+              <a href="/">Home</a>
+              <a href="About/">About</a>
+              <a href="Photos/">Photos</a>
+              <a href="Services/">Services</a>
+              <a href="Contact">Contact</a>
+          </div>
 	          <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
 	    <br/>
 	    <br/>
