--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <a href="Photos/">Photos</a>
               <a href="Services/">Services</a>
               <a href="Contact">Contact</a>
+	      <a href="irasTestPage/">Ira's [test]page</a>
           </div>
 		  <br/>
 	          <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
