--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<p>But, if you are Ira, click this button (he is doing some experimenting, and this is his [test] page)<a class"maina" href="irasTestPage/">Ira's [test]page</a></p>
 
 			<br/>
-	      <img src="A.jpg"></img><br/><br/>
+	      <img src="A.jpg" class="mainimg"></img><br/><br/>
 	<br/>
 	<br/>
 	<br/>
