--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	    <br/>
 	    <br/>
 	</footer>
-	                
+	<p class="small">click Me!</p>            
 </body>
 <script>
 function afm() {
