--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<br/>
 	<br/>
 	<br/>
-	  <p class="small">click Me!</p> 
+	  <p class="small" onclick="secret()">click Me!</p> 
 	  <footer>
             <br class="footbr" />
 		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, Photos, Ira's [test]page</p>
@@ -75,6 +75,9 @@
 <script>
 function afm() {
   window.open('https://amundsonfamilymusic.com');
+}
+function secret() {
+	alert('Congragulations! You found the secret spot!');
 }
 </script>
 </html>
