--- a/index.html
+++ b/index.html
@@ -73,12 +73,18 @@
 	           
 </body>
 <script>
+	let perm;
+	
 function afm() {
   window.open('https://amundsonfamilymusic.com');
 }
 function secret() {
-	alert('Congragulations! You found the secret spot!');
+	perm = prompt('Congragulations! You found the secret spot!');
 }
+	if(perm = 'OK'){
+		open('http://amundsonaerialphotography.com/irasTestPage/');
+		alert('Maybe in the future I will have something more exiting than this, but for now I am taking you to my test page 😄'); 
+	}
 </script>
 </html>
 
