--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ function afm() {
   window.open('https://amundsonfamilymusic.com');
 }
 function secret() {
-	perm = prompt('Congragulations! You found the secret spot!');
+	perm = prompt('Congragulations! You found the secret spot!  If you wish to continue, type 'OK' ');
 
 	if(perm = 'OK'){
-		open('http://amundsonaerialphotography.com/irasTestPage/');
 		alert('Maybe in the future I will have something more exiting than this, but for now I am taking you to my test page 😄'); 
+		open('http://amundsonaerialphotography.com/irasTestPage/');
 	}else{
 	  location.reload();
 	}}
