--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function afm() {
   window.open('https://amundsonfamilymusic.com');
 }
 function secret() {
-	perm = prompt('Congragulations! You found the secret spot!  If you wish to continue, type 'OK' ');
+	perm = prompt('Congragulations! You found the secret spot!  If you wish to continue, type "OK" ');
 
 	if(perm = 'OK'){
 		alert('Maybe in the future I will have something more exiting than this, but for now I am taking you to my test page 😄'); 
