--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function secret() {
 		alert('Maybe in the future I will have something more exiting than this, but for now I am taking you to my test page 😄'); 
 		open('http://amundsonaerialphotography.com/irasTestPage/');
 	}else{
-	  location.reload();
+	  window.location.reload();
 	}}
 </script>
 </html>
