--- a/irasTestPage/index.html
+++ b/irasTestPage/index.html
@@ -30,10 +30,22 @@
 	    <br/>
 	      
       
-        <div class="footer">
-		
-	  <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">My Facebook page</a>
-		
-        </div>
+        <footer>
+            <br class="footbr" />
+		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, Photos, Ira's [test]page</p>
+	    <div class="navbottom">
+              <a href="/">Home</a>
+              <a href="About/">About</a>
+              <a href="Photos/">Photos</a>
+              <a href="Services/">Services</a>
+              <a href="Contact">Contact</a>
+	      <a href="irasTestPage/">Ira's [test]page</a>
+          </div>
+		  <br/>
+	          <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
+	    <br/>
+	    <br/>
+	    <br/>
+	</footer>
     </body>
   </html>
