--- a/irasTestPage/index.html
+++ b/irasTestPage/index.html
@@ -28,8 +28,21 @@
 	    <br/>
 	    <br/>
 	    <br/>
-	      
-      
+	  
+      <!-- Trigger/Open The Modal -->
+<button id="myBtn">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
+	  
         <footer>
             <br class="footbr" />
 		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, Photos, Ira's [test]page</p>
