--- a/irasTestPage/index.html
+++ b/irasTestPage/index.html
@@ -42,6 +42,10 @@
   </div>
 
 </div>
+	
+	  <video width="320" height="240" controls>
+            <source src="movie.mp4" type="video/mp4">
+          </video>
 	  
         <footer>
             <br class="footbr" />
