--- a/irasTestPage/index.html
+++ b/irasTestPage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel='stylesheet' href='style.css'/>
+      <link rel='stylesheet' href='irasTestPage/style.css'/>
    
       <script src='script.js'></script>
     </head>
