--- a/irasTestPage/index.html
+++ b/irasTestPage/index.html
@@ -39,7 +39,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+    <p>Text Modal</p>
   </div>
 
 </div>
