--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 	<br/>
 	<br/>
 	<br/>
+	
+	<video width="320" height="240" controls>
+          <source src="car.MOV" type="video/MOV">
+        </video>
+	
 	  <p class="small" onclick="secret()">click Me!</p> 
 	  <footer>
             <br class="footbr" />
