--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 	<br/>
 	<br/>
 	<br/>
+	  <p>This is a short sample video of mine that is 1080p/60fps.  It is only 3 seconds long though.</p>
 	
 	<video width="320" height="240" controls>
-          <source src="car.MOV" type="video/MOV">
+          <source src="car.mov" type="video/mov">
         </video>
 	
 	  <p class="small" onclick="secret()">click Me!</p> 
