--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 	<br/>
 	<br/>
 	<br/>
-	  <p>This is a short sample video of mine that is 1080p/60fps.  It is only 3 seconds long though.</p>
+	  <p>This is a short 1080p/60fps sample video.</p>
 	
 	<video width="320" height="240" controls>
-          <source src="car.mov" type="video/mov">
+          <source src="car.mp4" type="video/mp4">
         </video>
 	
 	  <p class="small" onclick="secret()">click Me!</p> 
