--- a/Photos/index.html
+++ b/Photos/index.html
@@ -14,8 +14,25 @@
     <img src="AAP_0003.jpg" class="farm"></img><br/><br/><h3>4</h3>
     <img src="AAP_0004.jpg" class="farm"></img><br/><br/><h3>5</h3>
     <img src="AAP_0005.jpg" class="farm"></img><br/><br/>
-<center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p>
-<div class= "foot"></div></center>
+<center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p></center>
+
+<footer>
+            <br class="footbr" />
+		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, Photos, Ira's [test]page</p>
+	    <div class="navbottom">
+              <a href="/">Home</a>
+              <a href="About/">About</a>
+              <a href="Photos/">Photos</a>
+              <a href="Services/">Services</a>
+              <a href="Contact">Contact</a>
+	      <a href="irasTestPage/">Ira's [test]page</a>
+          </div>
+		  <br/>
+	          <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
+	    <br/>
+	    <br/>
+	    <br/>
+	</footer>
 
 
 
