--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<br/>
 	<br/>
 	<br/>
-	  <p>This is a short 1080p/60fps sample video.</p>
+	<p>This is a short 1080p/60fps sample video.</p><p text-size="15px" background-color="red" padding="5px">(There is no watermark on this video, so please do not try to download it.)</p>
 	
 	<video width="420" height="340" controls>
           <source src="car.mp4" type="video/mp4">
