--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	      <a href="irasTestPage/">Ira's [test]page</a>
           </div>
 		  <br/>
-	          <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
+	          <a onclick="open('https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/')">Check out My Facebook page</a>
 	    <br/>
 	    <br/>
 	    <br/>
