--- a/Photos/index.html
+++ b/Photos/index.html
@@ -9,11 +9,11 @@
 <body>
   <h1 class="Photos">Photos</h1>
 	<p>Here are some Photos!                     <button class="b1" onclick= "goBack()" >Go Back</button><br/><br/><h3>1</h3>
-    <img src="AAP_0001.jpg" class="farm" href="AAP_0001.jpg" cursor="pointer"></img><br/><br/><h3>2</h3>
-    <img src="AAP_0002.jpg" class="farm" href="AAP_0002.jpg" cursor="pointer"></img><br/><br/><h3>3</h3>
-    <img src="AAP_0003.jpg" class="farm" href="AAP_0003.jpg" cursor="pointer"></img><br/><br/><h3>4</h3>
-    <img src="AAP_0004.jpg" class="farm" href="AAP_0004.jpg" cursor="pointer"></img><br/><br/><h3>5</h3>
-    <img src="AAP_0005.jpg" class="farm" href="AAP_0005.jpg" cursor="pointer"></img><br/><br/>
+    <img src="AAP_0001.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0001.jpg')" cursor="pointer"></img><br/><br/><h3>2</h3>
+    <img src="AAP_0002.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0002.jpg')" cursor="pointer"></img><br/><br/><h3>3</h3>
+    <img src="AAP_0003.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0003.jpg')" cursor="pointer"></img><br/><br/><h3>4</h3>
+    <img src="AAP_0004.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0004.jpg')" cursor="pointer"></img><br/><br/><h3>5</h3>
+    <img src="AAP_0005.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0005.jpg')" cursor="pointer"></img><br/><br/>
 <center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p></center>
 
 <footer>
