--- a/Photos/index.html
+++ b/Photos/index.html
@@ -14,6 +14,7 @@
     <img src="AAP_0003.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0003.jpg')" ></img><br/><br/><h3>4</h3>
     <img src="AAP_0004.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0004.jpg')" ></img><br/><br/><h3>5</h3>
     <img src="AAP_0005.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0005.jpg')" ></img><br/><br/>
+    <a src="AAP_0005.jpg" class="farm" href="Photos/AAP_0001.jpg" ></a><br/><br/>
 <center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p></center>
 
 <footer>
