--- a/Photos/index.html
+++ b/Photos/index.html
@@ -14,7 +14,7 @@
     <a href="AAP_0003.jpg" ><img src="AAP_0003.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0003.jpg')" ></img></a><br/><br/><h3>4</h3>
     <a href="AAP_0004.jpg" ><img src="AAP_0004.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0004.jpg')" ></img></a><br/><br/><h3>5</h3>
     <a href="AAP_0005.jpg" ><img src="AAP_0005.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0005.jpg')" ></img></a><br/><br/><h3>6</h1>
-    <a href="shayefield.jpg" ><img src="shayefield.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/shayefield.jpg')" ></img></a>
+    <a href="shayefield.jpg" ><img src="shayefield.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/shayefield.jpg')" ></img></a><br/><br/>
 <center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p></center>
 
 <footer>
