--- a/Photos/index.html
+++ b/Photos/index.html
@@ -4,7 +4,7 @@
 	<title>Come back soon!</title>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
-	<link rel="shortcut icon" href="MyLogo.ico" />      
+	<link rel="shortcut icon" href="MyLogo.ico" />        DJI_0090.jpg  
 	</head>
 <body>
   <h1 class="Photos">Photos</h1>
@@ -15,7 +15,8 @@
     <a href="AAP_0004.jpg" ><img src="AAP_0004.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0004.jpg')" ></img></a><br/><br/><h3>5</h3>
     <a href="AAP_0005.jpg" ><img src="AAP_0005.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/AAP_0005.jpg')" ></img></a><br/><br/><h3>6</h1>
     <a href="shayefield.jpg" ><img src="shayefield.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/shayefield.jpg')" ></img></a><br/><br/><h3>7</h3>
-    <a href="DJI_0081.jpg" ><img src="DJI_0081.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/DJI_0081.jpg')" ></img></a><br/><br/><h3>8<br/>Coming soon! (1 minute)</h3>
+    <a href="DJI_0081.jpg" ><img src="DJI_0081.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/DJI_0081.jpg')" ></img></a><br/><br/><h3>8</h3>
+    <a href="DJI_0090.jpg" ><img src="DJI_0090.jpg" class="farm" onclick="open('http://amundsonaerialphotography.com/Photos/DJI_0090.jpg')" ></img></a><br/><br/>
 <center><p>All Photos taken by: Ira Amundson<br/>Guest Photographers: none</p></center>
 
 <footer>
