--- a/Photos/index.html
+++ b/Photos/index.html
@@ -4,7 +4,7 @@
 	<title>Come back soon!</title>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
-	<link rel="shortcut icon" href="MyLogo.ico" />        DJI_0090.jpg  
+	<link rel="shortcut icon" href="MyLogo.ico" />        
 	</head>
 <body>
   <h1 class="Photos">Photos</h1>
