--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel='stylesheet' href='style2.css'/>
-
-      <script src='script2.js'></script>
+      <link rel='stylesheet' href='style.css'/>
+      <link rel="shortcut_icon" href="MyLogo.ico"/>
+      <script src='script.js'></script>
     </head>
     <body>
       <center>
