--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a href="Photos/">Photos</a>
               <a href="Services/">Services</a>
               <a href="Contact">Contact</a>
-	      <a href="irasTestPage/">Ira's [test]page</a>
+	      <a href="irasTestPageThatNoLongerExists/">Ira's [test]page</a>
           </div>
 		  <br/>
 	          <button onclick="facebook()" class="facebook_button">Check out My Facebook page</button>
