Update and rename irasTestPage/index.html to irasTestPageThatNoLongerExists/index.html

--- a/irasTestPageThatNoLongerExists/index.html
+++ b/irasTestPageThatNoLongerExists/index.html
@@ -18,35 +18,7 @@
 	    </center>
 	    <br/>
 	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	    <br/>
-	  
-      <!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>Text Modal</p>
-  </div>
-
-</div>
-	
-	  <video width="320" height="240" controls>
-            <source src="movie.mp4" type="video/mp4">
-          </video>
+	  <h1 text-align="center"> This Page No longer EXISTS...</h1>
 	  
         <footer>
             <br class="footbr" />
