--- a/irasTestPageThatNoLongerExists/index.html
+++ b/irasTestPageThatNoLongerExists/index.html
@@ -19,7 +19,7 @@
 	    <br/>
 	    <br/>
 	  <h1 text-align="center"> This Page No longer EXISTS...</h1></br></br>
-          <h7>ps: the actual file itself will be deleted in a bit (not very long).
+          <h7>ps: the actual file itself will be deleted in a bit (not very long).</h7>
 	  
         <footer>
             <br class="footbr" />
