--- a/Photos/index.html
+++ b/Photos/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Come back soon!</title>
+	<title>AAP | Amundson Aerial Photography</title>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
 	<link rel="shortcut icon" href="MyLogo.ico" />        
