--- a/irasTestPageThatNoLongerExists/index.html
+++ b/irasTestPageThatNoLongerExists/index.html
@@ -2,41 +2,23 @@
   <html>
     <head>
       <link rel='stylesheet' href='style.css'/>
-   
+      <title>AAP | Extinct Page</title>
       <script src='script.js'></script>
     </head>
     <body>
-      <center>
-        <img src="A.jpg"></img>
-          <div class="navbar">
-            <a href="/">Home</a>
-            <a href="About/">About</a>
-            <a href="Photos/">Photos</a>
-            <a href="Services/">Services</a>
-            <a href="Contact">Contact</a>
-          </div>
-	    </center>
 	    <br/>
 	    <br/>
 	  <h1 text-align="center"> This Page No longer EXISTS...</h1></br></br>
           <h7>ps: the actual file itself will be deleted in a bit (not very long).</h7>
+<br/>
+	    <br/>
+	    <br/>
+
+<a href="Home/">Go To home Page</a>
 	  
-        <footer>
-            <br class="footbr" />
-		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, Photos, Ira's [test]page</p>
-	    <div class="navbottom">
-              <a href="/">Home</a>
-              <a href="About/">About</a>
-              <a href="Photos/">Photos</a>
-              <a href="Services/">Services</a>
-              <a href="Contact">Contact</a>
-	      <a href="irasTestPage/">Ira's [test]page</a>
-          </div>
-		  <br/>
-	          <a href="https://www.facebook.com/Amundson-Aerial-Photography-AAP-881108668736951/">Check out My Facebook page</a>
+        
 	    <br/>
 	    <br/>
 	    <br/>
-	</footer>
     </body>
   </html>
