--- a/irasTestPageThatNoLongerExists/index.html
+++ b/irasTestPageThatNoLongerExists/index.html
@@ -14,7 +14,7 @@
 	    <br/>
 	    <br/>
 
-<a href="Home/">Go To home Page</a>
+<a href="http://amundsonaerialphotography.com/">Go To home Page</a>
 	  
         
 	    <br/>
