--- a/About/index.html
+++ b/About/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <link rel='stylesheet' href='style.css'/>
-      <link rel="shortcut_icon" href="MyLogo.ico"/>
+      <link rel="shortcut icon" href="MyLogo.ico"/>
       <script src='script.js'></script>
     </head>
     <body>
