--- a/About/index.html
+++ b/About/index.html
@@ -36,11 +36,11 @@
 		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, Photos, Ira's [test]page</p>
 	    <div class="navbottom">
               <a href="/">Home</a>
-              <a href="About/">About</a>
-              <a href="Photos/">Photos</a>
-              <a href="Services/">Services</a>
-              <a href="Contact">Contact</a>
-	      <a href="irasTestPageThatNoLongerExists/">Ira's [test]page</a>
+              <a href="/About">About</a>
+              <a href="/Photos">Photos</a>
+              <a href="/Services">Services</a>
+              <a href="/Contact">Contact</a>
+	      <a href="/irasTestPageThatNoLongerExists">Ira's [test]page</a>
           </div>
 		  <br/>
 	          <button onclick="facebook()" class="facebook_button">Check out My Facebook page</button>
