--- a/About/index.html
+++ b/About/index.html
@@ -10,10 +10,10 @@
         <img src="A.jpg"></img>
           <div class="navbar">
             <a href="/">Home</a>
-            <a class="current" href="About/">About</a>
-            <a href="Photos/">Photos</a>
-            <a href="Services/">Services</a>
-            <a href="Contact">Contact</a>
+            <a href="/About">About</a>
+            <a href="/Photos">Photos</a>
+            <a href="/Services">Services</a>
+            <a href="/Contact">Contact</a>
           </div>
 	    </center>
 	    <br/>
