--- a/Photos/index.html
+++ b/Photos/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+	    <title>AAP | Amundson Aerial Photography</title>
       <link rel='stylesheet' href='style.css'/>
       <link rel="shortcut icon" href="MyLogo.ico"/>
       <script src='script.js'></script>
