--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 	    <title>AAP | Amundson Aerial Photography</title>
       <link rel='stylesheet' href='style.css'/>
-      <link rel="shortcut_icon" href="MyLogo.ico"/>
+      <link rel="shortcut icon" href="MyLogo.ico"/>
       <script src='script.js'></script>
     </head>
     <body>
