--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <footer>
             <br class="footbr" />
-		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, Photos, Ira's [test]page</p>
+		  <p>Do not try to click these links; you will get a 404 error (page not found).  Only the following links work: Home, About, Photos, Ira's [test]page</p>
 	    <div class="navbottom">
               <a href="/">Home</a>
               <a href="About/">About</a>
