--- a/Photos/index.html
+++ b/Photos/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <center>
-        <img src="A.jpg"></img>
+	      <a href="/"><img src="A.jpg"></img></a>
           <div class="navbar">
             <a href="/">Home</a>
             <a href="/About">About</a>
