--- a/randomNumberGenerator/index.html
+++ b/randomNumberGenerator/index.html
@@ -13,7 +13,7 @@
       <center>
       <div><button onclick="generate()" title="generate random number">GENERATE</button><p class="space" id="space"></p></div>
 
-      <input id="number" type="number" name="contestants" min="1" placeholder="#max">
+      <input id="myNumber" type="number" name="contestants" min="1" placeholder="#max">
 
       <!--
       <br/>
