--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+  <html>
+    <head>
+
+      <meta charset="utf-8">
+			<link rel='stylesheet' href='style.css'/>
+			<script src='script.js'></script>
+
+    </head>
+    <body><form>
+
+<div id="pic">
+  <h4>Do you have a aerial photo of your residence?</h4>
+      <input type="radio" id="yes" name="1" value="yes">Yes</input>
+      <br/>
+      <br/>
+      <input type="radio" id="no" name="1" value="no">No</input>
+</div>
+
+<div id="old">
+  <h4>Please enter the approximate date of your photo</h4>
+      <input type="number" id="yes" name="pic?" placeholder="date"></input>
+</div>
+
+<br/>
+<br/>
+<br/>
+<br/>
+
+<button onclick="go()">Submit</button>
+
+
+
+
+
+</form>
+    </body>
+  </html>
 
