--- a/quiz/index.html
+++ b/quiz/index.html
@@ -10,7 +10,7 @@
     <body><form>
 
 <div id="pic">
-  <h4>Do you have a aerial photo of your residence?</h4>
+  <h4>Do you have an aerial photo of your residence?</h4>
       <input type="radio" id="yes" name="1" value="yes">Yes</input>
       <br/>
       <br/>
