--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+  <html>
+    <head>
+
+      <meta charset="utf-8">
+			<link rel='stylesheet' href='style.css'/>
+			<script src='script.js'></script>
+
+    </head>
+    <body><form>
+
+<div id="old">
+  <h4>Please enter the approximate date (year) of your photo</h4>
+      <input type="number" id="date" name="date" placeholder="date"></input>
+</div>
+
+<br/>
+<br/>
+<br/>
+<br/>
+
+<button onclick="go()">Submit</button>
+
+
+
+
+
+</form>
+    </body>
+  </html>
 
