--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -11,7 +11,7 @@
 
 <div id="old">
   <h4>Please enter the approximate date (year) of your photo</h4>
-      <input type="number" id="date" name="date" placeholder="date" value="1940" min="1858" max="2018"></input>
+      <input type="number" id="picDate" name="date" placeholder="date" value="1940" min="1858" max="2018"></input>
 </div>
 
 <br/>
