--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -13,6 +13,17 @@
   <h4>Please enter the approximate date (year) of your photo</h4>
       <input type="number" id="picDate" name="date" placeholder="date" value="1940" min="1858" max="2018"></input>
 </div>
+<br/>
+<br/>
+<br/>
+<br/>
+<div id="planeOrDrone">
+	<h4>Was your photo taken from a Plane or UAV (Drone)?</h4>
+      <input type="radio" id="Plane" name="2" value="Plane">Plane</input>
+      <br/>
+      <br/>
+      <input type="radio" id="Drone" name="2" value="Drone">UAV (Drone)</input>
+</div>
 
 <br/>
 <br/>
