--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -19,10 +19,10 @@
 <br/>
 <div id="planeOrDrone">
 	<h4>Was your photo taken from a Plane or UAV (Drone)?</h4>
-      <input type="radio" id="Plane" name="2" value="Plane">Plane</input>
+      <input type="radio" id="Plane" name="AV" value="Plane">Plane</input>
       <br/>
       <br/>
-      <input type="radio" id="Drone" name="2" value="Drone">UAV (Drone)</input>
+      <input type="radio" id="Drone" name="AV" value="Drone">UAV (Drone)</input>
 </div>
 
 <br/>
