--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -10,7 +10,7 @@
     <body><form>
 
 <div id="old">
-  <h4>Please enter the approximate date (year) of your photo</h4>
+  <h4>Please enter the approximate date (year) of your earliest aerial photo</h4>
       <input type="number" id="picDate" name="date" placeholder="date" value="1940" min="1858" max="2018"></input>
 </div>
 <br/>
@@ -18,11 +18,22 @@
 <br/>
 <br/>
 <div id="planeOrDrone">
-	<h4>Was your photo taken from a Plane or UAV (Drone)?</h4>
+	<h4>Was that photo taken from a Plane or UAV (Drone)?</h4>
       <input type="radio" id="Plane" name="AV" value="Plane">Plane</input>
       <br/>
       <br/>
       <input type="radio" id="Drone" name="AV" value="Drone">UAV (Drone)</input>
+</div>
+<br/>
+<br/>
+<br/>
+<br/>
+<div id="colorValue">
+  <h4>Is the photo black and white or color?</h4>
+      <input type="radio" id="b&w" name="colorValue" value="black and white">black and white</input>
+      <br/>
+      <br/>
+      <input type="radio" id="color" name="colorValue" value="color">color</input>
 </div>
 
 <br/>
