--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -30,7 +30,7 @@
 <br/>
 <div id="colorValue">
   <h4>Is the photo black and white or color?</h4>
-      <input type="radio" id="b&w" name="colorValue" value="black and white">black and white</input>
+      <input type="radio" id="baw" name="colorValue" value="black and white">black and white</input>
       <br/>
       <br/>
       <input type="radio" id="color" name="colorValue" value="color">color</input>
