--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -35,6 +35,22 @@
       <br/>
       <input type="radio" id="color" name="colorValue" value="color">color</input>
 </div>
+<br/>
+<br/>
+<br/>
+<br/>
+<div id="change">
+  <h4>Is the photo black and white or color?</h4>
+      <input type="radio" id="no" name="change" value="no">No, it hasn't changed at all</input>
+      <br/>
+      <br/>
+      <input type="radio" id="bit" name="change" value="bit">A b</input>
+      <br/>it
+      <br/>
+      <input type="radio" id="lot" name="change" value="lot">It has changed a lot</input>
+
+</div>
+
 
 <br/>
 <br/>
