--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -40,14 +40,14 @@
 <br/>
 <br/>
 <div id="change">
-  <h4>Is the photo black and white or color?</h4>
+  <h4>How much has your farm changed since the last  aerial photo was taken?</h4>
       <input type="radio" id="no" name="change" value="no">No, it hasn't changed at all</input>
       <br/>
       <br/>
-      <input type="radio" id="bit" name="change" value="bit">A b</input>
-      <br/>it
+      <input type="radio" id="bit" name="change" value="bit">A bit</input>
       <br/>
-      <input type="radio" id="lot" name="change" value="lot">It has changed a lot</input>
+      <br/>
+      <input type="radio" id="lot" name="change" value="lot">It's changed a lot</input>
 
 </div>
 
