--- a/quiz/finish/index.html
+++ b/quiz/finish/index.html
@@ -8,7 +8,7 @@
 			<script src='script.js'></script>
 
     </head>
-    <body><form>
+    <body>
 
 <div id="old">
   <h4>Please enter the approximate date (year) of your earliest aerial photo</h4>
@@ -64,7 +64,7 @@
 
 
 
-</form>
+
     </body>
   </html>
 
